# routes/page_routes.py
@@ -1,10 +1,12 @@
 from flask import Blueprint, request, jsonify
 from database import get_db_connection
 from utils.auth import token_required
+import psycopg2                                              
+
 
 page_bp = Blueprint('page_bp', __name__)
 
-@page_bp.route('/pages', methods=['GET'])
+@page_bp.route('/api/pages', methods=['GET'])
 def get_pages():
     conn = get_db_connection()
     cur = conn.cursor()
@@ -16,15 +18,14 @@ def get_pages():
     result = []
     for page in pages:
         result.append({
-            "id": page[0],
-            "title": page[1],
-            "content": page[2],
-            "slug": page[3]
+            "id": page['id'],
+            "title": page['title'],
+            "content": page['content'],
+            "slug": page['slug']
         })
-#----------------------------------------------------------------------qwertyuioitqwertyuiuytrewqwert
     return jsonify(result), 200
 
-@page_bp.route('/pages', methods=['POST'])
+@page_bp.route('/api/pages', methods=['POST'])
 @token_required
 def create_page(current_user):
     data = request.get_json() or {}
@@ -37,12 +38,19 @@ def create_page(current_user):
 
     conn = get_db_connection()
     cur = conn.cursor()
-    cur.execute(
-        "INSERT INTO pages (title, content, slug) VALUES (%s, %s, %s) RETURNING id;",
-        (title, content, slug)
-    )
-    new_id = cur.fetchone()[0]
-    conn.commit()
+    try:
+        cur.execute(
+            "INSERT INTO pages (title, content, slug) VALUES (%s, %s, %s) RETURNING id;",
+            (title, content, slug)
+        )
+        new_id = cur.fetchone()['id']    
+        conn.commit()     
+    except psycopg2.errors.UniqueViolation:                        
+        conn.rollback()                                            
+        cur.close()                                                
+        conn.close()                                               
+        return jsonify({"message": f"'{slug}' slug bilan sahifa allaqachon mavjud!"}), 400  # <<< YANGI QATOR
+
     cur.close()
     conn.close()
 
