# swagger.yaml
@@ -30,7 +30,7 @@ paths:
         '200':
           description: Muvaffaqiyatli kirildi (Token qaytdi)
 
-  /categories:
+  /api/categories:
     get:
       summary: Barcha kategoryalarni olish
       responses:
@@ -38,6 +38,8 @@ paths:
           description: Kategoriyalar ro'yxati
     post:
       summary: Yangi kategorya yaratish
+      security:
+        - Bearer: []
       requestBody:
         required: true
         content:
@@ -56,7 +58,7 @@ paths:
           description: Kategory yaratildi
 
 
-  /posts:
+  /api/posts:
     get:
       summary: Barcha yangiliklarni olish
       responses:
@@ -64,6 +66,8 @@ paths:
           description: Yangiliklar roixati
     post:
       summary: Yangi yangilik qoshish
+      security:
+        - Bearer: []
       requestBody:
         required: true
         content:
@@ -85,7 +89,7 @@ paths:
           description: Yangilik yaratildi
 
 
-  /pages:
+  /api/pages:
     get:
       summary: Barcha sahifani olish
       responses:
@@ -93,6 +97,8 @@ paths:
           description: Sahifa ro'yxati qaytdi
     post:
       summary: Yangi sahifa yaratish
+      security:
+        - Bearer: []
       requestBody:
         required: true
         content:
@@ -119,7 +125,7 @@ paths:
         '400':
           description: Ma'lumotlar  togri emas
 
-  /comments:
+  /api/comments:
     get:
       summary: Barcha izohlarni olish
       responses:
@@ -127,6 +133,8 @@ paths:
           description: Izohlar ro'yxati qaytdi
     post:
       summary: Postga yangi izoh qo'shish
+      security:              
+        - Bearer: []
       requestBody:
         required: true
         content:
@@ -150,3 +158,9 @@ paths:
           description:  matn yoki post_id notori
         '404':
           description: post topilmadi
+components:
+  securitySchemes:
+    Bearer:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT      
